--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "next": "^16.1.4",
     "next-swagger-doc": "^0.4.1",
     "react": "^19.2.3",
